--- a/styles/styles.css
+++ b/styles/styles.css
@@ -51,7 +51,7 @@ img:hover {
 }
 
 h2 {
-    font-size: 24px; /* Tamanho de texto padrão */
+    font-size: 24px; 
     line-height: 32px;
     font-weight: 700;
     text-align: center;
@@ -60,21 +60,21 @@ h2 {
 
 @media (min-width: 768px) {
     h2 {
-        font-size: 30px; /* Tamanho maior para telas médias e maiores */
-        line-height: 40px; /* Ajusta o line-height para se adequar ao novo tamanho */
+        font-size: 30px; 
+        line-height: 40px; 
     }
 }
 
 #menu {
-    gap: 16px; /* Espaço entre as imagens */
-    padding: 20px; /* Adiciona um pouco de padding ao redor do conteúdo */
+    gap: 16px; 
+    padding: 20px; 
 }
 
 #menu img {
-    width: 112px; /* equivalente a w-28 */
-    height: 112px; /* equivalente a h-28 */
-    border-radius: 6px; /* equivalente a rounded-md */
-    transition: transform 300ms ease; /* adiciona uma transição suave */
+    width: 112px; 
+    height: 112px; 
+    border-radius: 6px; 
+    transition: transform 300ms ease; 
 }
 
 #menu img:hover {
